--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.83.0",
     "next": "15.2.1",
+    "next-sanity": "^9.9.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sanity": "^3.83.0",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
